@@ -23,17 +23,12 @@ package org.biojava.nbio.core.sequence.location;
 
 import org.biojava.nbio.core.exceptions.ParserException;
 import org.biojava.nbio.core.sequence.AccessionID;
-import org.biojava.nbio.core.sequence.DNASequence;
 import org.biojava.nbio.core.sequence.DataSource;
 import org.biojava.nbio.core.sequence.Strand;
 import org.biojava.nbio.core.sequence.location.template.AbstractLocation;
 import org.biojava.nbio.core.sequence.location.template.Location;
 import org.biojava.nbio.core.sequence.location.template.Point;
-import org.biojava.nbio.core.sequence.template.AbstractSequence;
-import org.biojava.nbio.core.sequence.template.Compound;
 
-import java.io.IOException;
-import java.io.Reader;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -47,7 +42,10 @@ import java.util.regex.Pattern;
  * @author jgrzebyta
  * @author Paolo Pavan
  */
-public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
+public class InsdcParser {
+
+	private boolean isSequenceCircular;
+	private long sequenceLength;
 
 	private final DataSource dataSource;
 
@@ -55,10 +53,6 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 	 * parse a location. if group(1) is null than the feature is on the positive
 	 * strand, group(2) start position, group(3) end position.
 	 */
-	// why in the location the first character was ignored?
-	//protected static final Pattern singleLocationPattern = Pattern.compile("(?:[A-Z]([A-Za-z\\.0-9_]*?):)?(<?)(\\d+)(\\.{2}|\\^)?(>?)(\\d+)?(>?)?");
-
-	// fixed issue #254
 	protected static final Pattern singleLocationPattern = Pattern.compile("(?:([A-Za-z\\.0-9_]*?):)?(<?)(\\d+)(\\.{2}|\\^)?(>?)(\\d+)?(>?)?");
 	/**
 	 * Decodes a split pattern. Split patterns are a composition of multiple
@@ -80,7 +74,6 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 	 * Not really sure that they are not declared obsolete but they are still in
 	 * several files.
 	 */
-	//protected static final Pattern genbankSplitPattern = Pattern.compile("^\\s?(join|order|bond|complement|)\\(?([^\\)]+)\\)?");
 	protected static final Pattern genbankSplitPattern = Pattern.compile("^\\s?(join|order|bond|complement|)\\(?(.+)\\)?");
 	/**
 	 * designed to recursively split a location string in tokens. Valid tokens
@@ -94,9 +87,6 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 	 * features
 	 */
 	protected Integer featureGlobalStart, featureGlobalEnd;
-
-	//private S referenceSequence = new org.biojava.nbio.core.sequence.DNASequence();
-	private AbstractSequence referenceSequence = new DNASequence();
 
 	enum complexFeaturesAppendEnum {
 
@@ -126,7 +116,13 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 		return dataSource;
 	}
 
+	public void setSequenceCircular(boolean sequenceCircular) {
+		isSequenceCircular = sequenceCircular;
+	}
 
+	public void setSequenceLength(long sequenceLength) {
+		this.sequenceLength = sequenceLength;
+	}
 
 	/**
 	 * Main method for parsing a location from a String instance
@@ -146,33 +142,19 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 			l = ll.get(0);
 		} else {
 			l = new SimpleLocation(
-					featureGlobalStart,
-					featureGlobalEnd,
+					new SimplePoint(featureGlobalStart),
+					new SimplePoint(featureGlobalEnd),
 					Strand.UNDEFINED,
+					isSequenceCircular,
 					ll);
 		}
 		return l;
-	}
-
-	/**
-	 * Reader based version of the parse methods.
-	 *
-	 * @param reader The source of the data; assumes that end of the reader
-	 * stream is the end of the location string to parse
-	 * @return The parsed location
-	 * @throws IOException Thrown with any reader error
-	 * @throws ParserException Thrown with any error with parsing locations
-	 */
-	public List<AbstractLocation> parse(Reader reader) throws IOException, ParserException {
-		// use parse(String s) instead!
-		return null;
 	}
 
 	private List<Location> parseLocationString(String string, int versus) throws ParserException {
 		Matcher m;
 		List<Location> boundedLocationsCollection = new ArrayList<Location>();
 
-		//String[] tokens = string.split(locationSplitPattern);
 		List<String> tokens = splitString(string);
 		for (String t : tokens) {
 			m = genbankSplitPattern.matcher(t);
@@ -186,7 +168,8 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 			if (!splitQualifier.isEmpty()) {
 				//recursive case
 				int localVersus = splitQualifier.equalsIgnoreCase("complement") ? -1 : 1;
-				List<Location> subLocations = parseLocationString(splitString, versus * localVersus);
+				List<Location> subLocations = parseLocationString(
+						splitString, versus * localVersus);
 
 				switch (complexFeaturesAppendMode) {
 					case FLATTEN:
@@ -228,8 +211,8 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 
 				String accession = m.group(1);
 				Strand s = versus == 1 ? Strand.POSITIVE : Strand.NEGATIVE;
-				int start = Integer.parseInt(m.group(3));
-				int end = m.group(6) == null ? start : new Integer(m.group(6));
+				int start = Integer.valueOf(m.group(3));
+				int end = m.group(6) == null ? start : Integer.valueOf(m.group(6));
 
 				if (featureGlobalStart > start) {
 					featureGlobalStart = start;
@@ -238,11 +221,35 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 					featureGlobalEnd = end;
 				}
 
-				AbstractLocation l = new SimpleLocation(
-						start,
-						end,
-						s
-				);
+				AbstractLocation l;
+				if (start <= end) {
+					l = new SimpleLocation(
+							start,
+							end,
+							s
+					);
+				} else {
+					// in case of location spanning the end point, Location contract wants sublocations
+					AbstractLocation l5prime = new SimpleLocation(
+							1,
+							end,
+							Strand.UNDEFINED
+							);
+					AbstractLocation l3prime = new SimpleLocation(
+							start,
+							(int) sequenceLength,
+							Strand.UNDEFINED
+							);
+
+					l = new InsdcLocations.GroupLocation(
+							new SimplePoint(start),
+							new SimplePoint(end),
+							s,
+							isSequenceCircular,
+							l5prime, l3prime
+					);
+
+				}
 
 				if(m.group(4) != null && m.group(4).equals("^")) l.setBetweenCompounds(true);
 
